# RefEngine-Old

./: .gitignore  .gitmodules  AIETestBed.sln  CmakeLists.txt  MakeVisualStudio2013Project.cmd  MakeVisualStudio2015Project.cmd  MakeXcodeProject.command  README.md  RefEngine.sln  RefEngine.sublime-project  RefEngine.userprefs  Settings.cap
AIETestBed/: AIETestbed.vcxproj  AIETestbed.vcxproj.filters  Camera.cpp  Camera.h  Color.h  GLHelpers.cpp  GLHelpers.h  GameObject.h  Main.cpp  Material.cpp  Material.h  MeshRenderer.cpp  OpenGLOperators.cpp  OpenGLOperators.h  OpenGLTypes.cpp  OpenGLTypes.h  Prims.cpp  Prims.h  ReadMe.txt  Renderable.h  Renderer.cpp  Renderer.h  ShaderManager.cpp  ShaderManager.h  StronglyTyped.h  TestBed.cpp  TestBed.h  VertexArrayRenderer.cpp  VertexArrayRenderer.h
RefEngine/: AssetContainer.cpp  AssetContainer.h  AssetManager.cpp  AssetManager.h  Buffer.cpp  Buffer.h  CMakeLists - Copy.txt  CMakeLists.txt  CachingFactory.h  Camera.cpp  Camera.h  Color.cpp  Color.h  Controller.h  EntityManager.cpp  EntityManager.h  FlyCameraProcessor.h  FlyInput.cpp  FlyInput.h  GLHelpers.cpp  GLHelpers.h  GameObject.cpp  GameObject.h  IGameObject.h  Main.cpp  Material.cpp  Material.h  MaterialManager.cpp  MaterialManager.h  OpenGLTypes.cpp  OpenGLTypes.h  Prims.cpp  Prims.h  ProgramManager.cpp  ProgramManager.h  RefEngWindowGLFW.cpp  RefEngWindowGLFW.h  RefEngWindowQT.cpp  RefEngWindowQT.h  RefEngine.cpp  (+25 more)
RefEngine/component/: CameraComponent.h  DebugComponent.h  DebugUIComponent_GLFW.h  DrawComponent.h  FlyInputComponent.h  LightComponent.h  RenderableComponent.cpp  RenderableComponent.h  SpinComponent.h  TransformComponent.cpp  TransformComponent.h  UpdateComponent.h
RefEngine/debug/: DebugGUI.cpp  DebugGUI.h
RefEngine/entity/: Component.h  ComponentContainer.h  ComponentContainerProcessor.h  ComponentDatabase.h  ComponentHandle.h  ComponentProcessor.cpp  ComponentProcessor.h  Entity.h  RenderableComponent.cpp  RenderableComponent.h  TransformComponent.h  UpdateComponent.h
RefEngine/file/: FBXFile.cpp  FBXFile.h  tiny_obj_loader.h
RefEngine/graphics/: Buffer.cpp  Buffer.h  BufferInfo.cpp  GLEnum.h  GLHelpers.cpp  GLHelpers.h  GLProgram.cpp  GLProgram.h  GLTypes.h  Material.cpp  Material.h  Mesh.cpp  Mesh.h  OpenGLRenderer.cpp  OpenGLRenderer.h  OpenGLTypes.h  Primitive.cpp  Primitive.h  Prims.cpp  Prims.h  RefEngOpenGL.h  RenderProcessor.cpp  RenderProcessor.h  Texture.h  VertexBufferInfo.cpp  VertexBufferInfo.h  gl_core_4_4.c  gl_core_4_4.h
RefEngine/input/: FlyInput_GLFW.cpp
RefEngine/src/: AssetContainer.h  AssetManager.cpp  AssetManager.h  Buffer.cpp  Buffer.h  CachingFactory.h  Camera.cpp  Camera.h  ComponentContainer.cpp  ComponentContainer.h  ComponentIteratorPair.h  ComponentManager.cpp  ComponentManager.h  Components.h  Controller.h  Data.cpp  Entity.cpp  Entity.h  EntityManager.cpp  EntityManager.h  FlyInput.cpp  FlyInput.h  GLHelpers.cpp  GLHelpers.h  GameObject.cpp  GameObject.h  GameTime.h  GizmosComponent.cpp  GizmosComponent.h  IndexedContainer.h  IndexedIterator.h  Material.cpp  Material.h  Mesh.cpp  OpenGLRenderer.cpp  OpenGLRenderer.h  OpenGLTypes.h  Prims.h  Processor.h  ProcessorManager.h  (+21 more)
RefEngine/src/components/: ComponentContainer.h  ComponentManager.cpp  Entity.cpp  Entity.h  EntityManager.cpp  EntityManager.h  Processor.h
RefEngine/src/graphics/: GLHelpers.cpp  GLHelpers.h  Material.cpp  Material.h  Mesh.cpp  Mesh.h  OpenGLRenderer.h  OpenGLTypes.h  Prims.h  RenderProcessor.cpp  RenderProcessor.h
RefEngine/src/physics/: PhysXComponent.cpp  PhysXComponent.h  PhysXGizmoComponent.cpp  PhysXGizmoComponent.h  PhysXPhysics.cpp  PhysXTriggerShapeComponent.cpp  PhysXTriggerShapeComponent.h  PhysicsComponent.cpp  PhysicsComponent.h
RefEngine/src/utils/: memaligned.h
RefEngine/utils/: pow2assert.h
RefEngine/window/: RefEngWindow_GLFW.cpp  RefEngWindow_GLFW.h  imgui_impl_glfw_gl3.cpp
RefEngineTests/: CMakeLists.txt  ComponentManagerTests.cpp  FileLoadPerfTests.cpp  ProcessorTests.cpp  Tests.cpp  VariadicHashTests.cpp
RefEngineTests/src/: CachingFactoryTests.cpp  ComponentContainerTests.cpp  ComponentManagerTests.cpp  ContainerTests.cpp  EntityManagerTests.cpp  IndexedContainerTests.cpp  IndexedIteratorTests.cpp  ProcessorTests.cpp  VariadicHashTests.cpp
TestBed/: CMakeLists.txt  Main.cpp  TestBed.cpp  TestBed.h  TestPhysics.cpp  TestPhysics.h
TestBed/data/models/: cube.fbx  cylinder.fbx  sphere.fbx
TestBed/data/models/ruinedtank/: tank.fbx
TestBed/data/shaders/: default.vert  diffuse.frag  lit.frag  red.frag  vertexColored.vert  white.frag
assets/shaders/: Color.vert  Normal.vert  NormalLit.frag  TexCoord.vert  TexCoordNormalTangent.vert  TexturedLit.frag  diffuse.frag  lit.frag  lit_textured.frag  lit_textured.vert  textured.frag
bii/: .hive.db  settings.bii
data/models/: SponzaSimple.fbx
data/shaders/: default.vert  red.frag
dep/AntTweakBar/: CmakeLists.txt
dep/AntTweakBar/src/: TwMgr.cpp
dep/FBXLoader/: FBXFile.cpp  FBXFile.h
